# null

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  OPERATIONS_PLAN.md  README.ko.md  README.md  docker-compose.yml  monitor.sh  package.json  pnpm-lock.yaml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  start-null-backend.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_runner_lease.py  1a5b8a43fdc7_add_agent_posts_table.py  2a6c9b54edf8_add_agent_memories_claims_tables.py
backend/migrations/: add_ko_columns.sql  reconcile_embedding_dim_1024.sql
backend/scripts/: loadtest.py
backend/src/null_engine/: config.py  db.py  main.py
backend/src/null_engine/agents/: memory.py  orchestrator.py  protocol.py
backend/src/null_engine/api/: deps.py
backend/src/null_engine/core/: auto_genesis.py  circuit_breaker.py  consensus.py  conversation.py  events.py  genesis.py  herald.py  posts.py  runner.py  runner_manager.py  time_dilation.py  wiki.py
backend/src/null_engine/models/: __init__.py  schemas.py  tables.py
backend/src/null_engine/services/: convergence.py  (+10 more)
backend/tests/: conftest.py  test_bookmarks_api_smoke.py  test_conversations_api_smoke.py  test_events_api_smoke.py  test_export_api_smoke.py  test_export_training_formats.py  test_health.py  test_loadtest_script_smoke.py  test_mention_extractor_unit.py  test_multiverse_api_smoke.py  test_ops_api_smoke.py  test_runner_state_machine.py  test_strata_api_smoke.py  test_workflow_e2e_smoke.py  test_worlds_api_smoke.py  test_write_auth.py
(+129 files in other folders)
