[tool.poetry]
name = "null-engine"
version = "0.1.0"
description = "NULL — autonomous agent simulation engine"
authors = []
readme = "README.md"
packages = [{include = "null_engine", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
langgraph = "^0.2.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.2.0"
openai = "^1.50.0"
anthropic = "^0.37.0"
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
pgvector = "^0.3.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
websockets = "^13.0"
httpx = "^0.27.0"
structlog = "^24.0.0"
alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
